objects/Opportunity_Control_Point_Approvals__c.object
<CustomObject>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Compute, Connect, Store (CCS)</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Industrial,Medical &amp;Scientific</fullName>
                </value>
                <value>
                    <fullName>Testchip</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLM__c</fullName>
        <label>PLM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leading Edge</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
                <value>
                    <fullName>Mature</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Packaging / Hetero-Integration</fullName>
                </value>
                <value>
                    <fullName>ASIC</fullName>
                </value>
                <value>
                    <fullName>SiPh</fullName>
                </value>
                <value>
                    <fullName>RF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Control_Point_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Control Point Approvals</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>PLM__c</columns>
        <columns>Pricing__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Opportunity Control Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Control Point Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>